# krinkin_notes

./: .gitignore  README.md
Курс 1!/: Портфолио.pptx
Курс 1!/Web-программирование/: Л1 Web-программирование.md  Л2 Курсовая работа.md  Л3 Инструменты и структура Web-программирования.md  Л4 Оформление текста.md  Л5 CSS.md  Л6 Публикация сайта.md  Орг. моменты.md
Курс 1!/Безопасность жизнедеятельности/: Л1 Организация работ по охране труда на предприятии.md  Л2 Опасные и вредные производственные факторы.md  Л3 Вибрация.md  Л4 Электромагнитная безопасность.md
Курс 1!/Введение в профессиональную деятельность/: Untitled.md
Курс 1!/История России/: Замечания.md  Зачёт по истории.docx  С1 Владимир Святославич.md  С10 Николай I.md  С11 Александр II.md  С2 Александр Невский.md  С3 Иван III.md  С4 Иван Васильевич.md  С5 Борис Годунов.md  С6 Алексей Михайлович.md  С7 Пётр I.md  С8 Екатерина II.md  С9.md
Курс 1!/Основы программирования/: Untitled.md  Л1 Базовые алгоритмические структуры.md  Л2 Оператор цикла.md  Л3 Массивы.md  Л4 Двухмерные массивы.md  Л5 Указатели.md  Л6 Динамические переменные.md  Л7 Динамические массивы.md  Ответ.md  Экзамены.md
Курс 1!/Основы российской государственности!/: Орг вопросы.md
Курс 1!/Структурное программирование/: Задача им. Пышницкого.md  Курсовая работа.md  Л1 Структуры.md  Л2 Строки в языке C.md  Л3 Тип string.md  Л4 Визуальные приложения.md  Л5 Функции.md  Л6 Файлы.md  Л7 Файлы в языке C++.md  Л8 Исключения.md  Л9 Состав языка С.md
Курс 1!/Теория информации!/: Л1 Основные понятия и определения теории информации.md  Л2 Меры информации.md  Л4 Преобразование информации.md  Л5 Кодирование информации как средство обеспечивания контроля работы автоматов.md  Л6 Сжатие данных.md  Орг. моменты.md
Курс 1!/Философия/: 2023 ВОПРОСЫ К ПРАКТИЧЕСКИМ ЗАНЯТИЯМ.doc
Курс 2!/Ассемблер/: Л1 База.md
Курс 2!/Графика/: Л1 Компьютерная графика.md  Л2 Математические основы компьютерной графики.md  Л4 Геометрическое моделирование.md  Л7 Библиотеки.md
Курс 2!/История России 2/: Л2 Революция 1917 года.md
Курс 2!/ООП!/: Л6 Виртуальные функции.md  Л7 Типы наследований.md
Курс 2!/ООП!/Лабораторные/Lab6/QtProject/: CMakeLists.txt  Project1.vcxproj  Project1.vcxproj.filters  Source.cpp  bridge.cpp  bridge.h  gateway.cpp  gateway.h  net_room.cpp  net_room.h  repeater.cpp  repeater.h  resource.h  router.cpp  router.h  stats.cpp  stats.h  switch.cpp  switch.h  tests.cpp  tests.h  ~AutoRecover.Project1.vcxproj
Курс 2!/ООП!/Лабораторные/Lab6/QtProject/src/: gateway.cpp  net_device.h  net_room.cpp  net_room.h  repeater.cpp  repeater.h  tests.cpp
Курс 2!/Основы Data Science/: Л1 Введение.md  Л2.md  Л4 Меры и типы признаков.md  Л5 Гипотезы.md  Л6.md
Курс 2!/Структуры и алгоритмы обработки данных/Лабораторные/Сем3/Lab2/Lab2/: CMakeLists.txt  Lab2.sln  Lab2.vcxproj  Source.cpp
Курс 2!/Структуры и алгоритмы обработки данных/Лабораторные/Сем3/Lab5/QtProject/: CMakeLists.txt  Project1.vcxproj  Source.cpp  arr_gen.py  input.txt
Курс 2/ООП/Курисовая/Course/: CMakeLists.txt  Course.sln  Course.vcxproj  Course.vcxproj.filters
Курс 2/ООП/Курисовая/Course/NetDevices/: CMakeLists.txt
Курс 2/ООП/Курисовая/Course/NetDevices/src/containers/: container.cpp  container.h  net_room.cpp  net_room.h  stats.cpp
Курс 2/ООП/Курисовая/Course/NetDevices/src/devices/: repeater.cpp  repeater.h  router.cpp  router.h  wl_repeater.h
Курс 2/ООП/Курисовая/Course/NetDevices/src/misc/: address.cpp  address.h  client.cpp  client.h
Курс 2/ООП/Курисовая/Course/VSUnitTests/: VSUnitTests.vcxproj
Курс 2/ООП/Курисовая/Course/WinUI/: GUI.cpp  GUI.h  WinUI.vcxproj  WinUI.vcxproj.filters
Курс 2/ООП/Курисовая/QtProject/: CMakeLists.txt  Project1.sln  Project1.vcxproj  Project1.vcxproj.filters
Курс 2/ООП/Курисовая/QtProject/src/: Source.cpp  gateway.h  net_device.h  net_room.cpp  repeater.cpp  stats.cpp  stats.h  tests.cpp
Курс 2/ООП/Курисовая/QtProject/src/containers/: container.cpp  net_room.cpp  net_room.h  stats.h
Курс 2/ООП/Курисовая/QtProject/src/devices/: gateway.cpp  gateway.h  net_device.h  repeater.cpp  router.cpp  router.h  switch.cpp  switch.h  wl_repeater.cpp  wl_repeater.h
Курс 2/ООП/Курисовая/QtProject/src/misc/: address.cpp  address.h  client.h
Курс 2/ООП/Лабораторные/07. Множественное наследование/QtProject/: CMakeLists.txt
Курс 2/ООП/Лабораторные/07. Множественное наследование/QtProject/src/: gateway.cpp  gateway.h  net_room.cpp  router.cpp  router.h  stats.cpp  stats.h  tests.h
(+634 files in other folders)
